add component for download by time

--- a/resources/test/run-tests.html
+++ b/resources/test/run-tests.html
@@ -9,6 +9,7 @@
     <script>
       WCT.loadSuites([
         'emp-countrydownload.html',
+          'emp-timedownload.html',
       ]);
     </script>
   </body>
