add component for download by app

--- a/resources/test/run-tests.html
+++ b/resources/test/run-tests.html
@@ -10,6 +10,7 @@
       WCT.loadSuites([
         'emp-countrydownload.html',
           'emp-timedownload.html',
+          'emp-appdownload.html',
       ]);
     </script>
   </body>
