add component trend download

--- a/resources/test/run-tests.html
+++ b/resources/test/run-tests.html
@@ -11,6 +11,7 @@
         'emp-countrydownload.html',
           'emp-timedownload.html',
           'emp-appdownload.html',
+          'emp-trenddownload.html',
       ]);
     </script>
   </body>
