--- a/resources/emp-map.html
+++ b/resources/emp-map.html
@@ -62,12 +62,15 @@
         });
 
         function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 5,
-                center: new google.maps.LatLng(45.464204, 9.189982),
-                mapTypeId: 'roadmap'
-            });
-            _isMapInitialized = true;
+            let initialize = function(){
+                map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 5,
+                    center: new google.maps.LatLng(45.464204, 9.189982),
+                    mapTypeId: 'roadmap'
+                });
+                _isMapInitialized = true;
+            }
+            google.maps.event.addDomListener(window, "load", initialize);
         }
     </script>
 
