--- a/resources/emp-timedownload.html
+++ b/resources/emp-timedownload.html
@@ -1,5 +1,5 @@
 <link rel="import" href="node_modules/@polymer/polymer/polymer.html">
-<script src="node_modules/moment/moment.js"></script>
+<link rel="import" href="momentimport.html">
 
 <dom-module id="emp-timedownload">
     <template>
