fix for non-vulcanizing moment.js

--- a/resources/index.vulcanized.html
+++ b/resources/index.vulcanized.html
@@ -17752,7 +17752,8 @@ Example:
             }
         });
     </script>
-</dom-module><script src="node_modules/moment/moment.js"></script><dom-module id="emp-timedownload" assetpath="">
+</dom-module><script src="moment.min.js"></script>
+<dom-module id="emp-timedownload" assetpath="">
     <template>
         <style>
             :host {
